--- a/homeworks/HW07/artifacts/best_configs.json
+++ b/homeworks/HW07/artifacts/best_configs.json
@@ -1,26 +1,34 @@
 {
-  "model_name": "Random Forest",
-  "best_params": "{'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': 'balanced', 'criterion': 'gini', 'max_depth': None, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 600, 'n_jobs': -1, 'oob_score': True, 'random_state': 42, 'verbose': 0, 'warm_start': False}",
-  "test_metrics": {
-    "accuracy": 0.9676,
-    "precision": 1.0,
-    "recall": 0.34146341463414637,
-    "f1": 0.5090909090909091,
-    "roc_auc": 0.9008318578487987
+  "Dataset_1": {
+    "method": "KMeans",
+    "params": {
+      "silhouette": 0.5216395622404242,
+      "davies_bouldin": 0.6853295219054456,
+      "calinski_harabasz": 11786.954622671532,
+      "k": 2,
+      "noise_ratio": 0.0
+    }
   },
-  "timestamp": "2026-01-18T18:28:38.147345",
-  "feature_importances": [
-    "f54",
-    "f25",
-    "f13",
-    "f53",
-    "f58",
-    "f38",
-    "f41",
-    "f04",
-    "f08",
-    "f47",
-    "f46",
-    "f16"
-  ]
+  "Dataset_2": {
+    "method": "DBSCAN",
+    "params": {
+      "silhouette": 0.34554999921850155,
+      "davies_bouldin": 0.5509870790351395,
+      "calinski_harabasz": 10.405774777673175,
+      "eps": 0.7,
+      "min_samples": 3,
+      "n_clusters": 2,
+      "noise_ratio": 0.007125
+    }
+  },
+  "Dataset_3": {
+    "method": "KMeans",
+    "params": {
+      "silhouette": 0.3155447003782518,
+      "davies_bouldin": 1.1577256320598663,
+      "calinski_harabasz": 6957.162639510167,
+      "k": 3,
+      "noise_ratio": 0.0
+    }
+  }
 }
